--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "firebase": "^10.14.0",
+    "framer-motion": "^11.11.11",
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
